# ACG-localizer

./: .gitignore  CMakeLists.txt  README.md  mt_instructions.txt
ex_images/: list.txt
ex_images/galaxy/: list.txt  list_jpg.txt  list_png.txt  result.txt
flann-1.6.11-src/src/cpp/: CMakeLists.txt
flann-1.6.11-src/src/cpp/flann/algorithms/: kmeans_index.h
include/: acs_localizer.h  bundler_camera.hh  math.hh  parse_bundler.hh  visual_words_handler.hh
src/: Bundle2Info.cc  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  acg_localizer.cc  acg_localizer_active_search.cc  acg_localizer_knn.cc  acs_localizer.cc  acs_localizer.h  compute_desc_assignments.cc  pointcloudmapping.cpp  pointcloudmapping.h
src/features/: SIFT_loader.cc  visual_words_handler.cc
src/math/SFMT_src/: SFMT.cc
src/sfm/: parse_bundler.cc
src/solver/: solverbase.hh  solverproj.hh
